Logout feature added