@@ -1,10 +1,12 @@
 package com.ewis.demo.ewispc.security;
 
+import com.ewis.demo.ewispc.service.LogoutService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
@@ -25,6 +27,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
     private final UserDetailsService userDetailsService;
 
+    @Autowired
+    private LogoutService logoutService;
+
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
@@ -38,19 +43,25 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         String token = authHeader.substring(7);
+
+        // Reject if the token is blacklisted
+        if (logoutService.isTokenBlacklisted(token)) {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.getWriter().write("Token is blacklisted. Please log in again.");
+            return;
+        }
+
         String username = jwtUtil.extractUsername(token);
 
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             UserDetails userDetails = userDetailsService.loadUserByUsername(username);
 
             if (jwtUtil.validateToken(token, userDetails)) {
-                // Extract role from JWT token
                 String role = jwtUtil.extractClaim(token, claims -> claims.get("role", String.class));
 
-                // Assign role-based authority (Ensure Spring Security format)
                 List<GrantedAuthority> authorities = (role != null)
-                        ? List.of(() -> "ROLE_" + role.toUpperCase()) // Converts "admin" -> "ROLE_ADMIN"
-                        : Collections.emptyList();
+                        ? List.of(() -> "ROLE_" + role)
+                        : List.of();
 
                 Authentication authentication = new UsernamePasswordAuthenticationToken(
                         userDetails, null, authorities
